# NexusBioTwin

./: ARCHITECTURE.md  README.md  RESEARCH.md  ROADMAP.md  debug_server.py  pyproject.toml  server_log.txt
.playwright-cli/: page-2026-03-15T18-28-26-261Z.yml  page-2026-03-15T18-29-11-666Z.yml  page-2026-03-15T18-29-47-035Z.yml
examples/: autonomous_lab_mission.json  mars_regolith_mission.json  niche_reactor_mission.json  pfas_brine_frontier_mission.json  pfas_brine_mission.json  phase6_quantum_swarm.json  phase7_xenobiology_storage.json
examples/phase6_out/: manifest.json  plan.json  report.md
examples/phase7_out/: manifest.json  plan.json  report.md
runs/codex_run/: manifest.json  plan.json
runs/gui/20260315T123252Z_autonomous_lab_mars_002/: manifest.json
runs/gui/20260315T123647Z_mars_regolith_001/: manifest.json  plan.json  report.md
runs/mars_verify/: manifest.json  plan.json  report.md
runs/niche_reactor_demo/: manifest.json  plan.json  report.md
runs/niche_reactor_demo_v2/: manifest.json  plan.json  report.md
runs/niche_reactor_demo_v3/: manifest.json  plan.json
runs/pfas_brine_advanced/: manifest.json  report.md
runs/pfas_brine_demo/: manifest.json  plan.json
runs/pfas_brine_frontier/: manifest.json  report.md
runs/pfas_brine_frontier_live/: manifest.json  plan.json
runs/pfas_brine_regression/: manifest.json  report.md
runs/pfas_verify/: manifest.json  plan.json
src/nexusbiotwin/: cli.py  compiler.py  models.py  server.py
src/nexusbiotwin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+34 files in other folders)
