[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusbiotwin"
version = "0.1.0"
description = "A local-first mission compiler for genome-to-habitat digital twin planning."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.scripts]
nexusbiotwin = "nexusbiotwin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
